--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title></title>
   <meta name="description" content="" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!--[if gte IE 9]><!-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,800" />
-  <link rel="stylesheet" href="css/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,800" rel="stylesheet" />
+  <link href="css/main.css" rel="stylesheet" />
   <!--<![endif]-->
 
   <script src="js/modernizr.min.js"></script>
