--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!--[if gte IE 9]><!-->
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,800" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,800" rel="stylesheet" />
   <link href="css/main.css" rel="stylesheet" />
   <!--<![endif]-->
 
@@ -36,7 +36,7 @@
       </div>
     </nav>
     <section id="hero">
-      <img src="http://placehold.it/1200x100/111/222/?text=HERO" />
+      <img src="http://placehold.it/1200x200/eee/ddd/?text=HERO" />
     </section>
     <main id="body">
 
@@ -79,16 +79,16 @@
                 <legend>Legend</legend>
                 <div class="row">
                   <div class="col-xs-6">
-                    <div class="form-group"><label>Label</label><input type="text" class="form-control" placeholder="Placeholder" /></div>
+                    <div class="form-group"><label for="form-control-1">Label</label><input type="text" id="form-control-1" class="form-control" placeholder="Placeholder" /></div>
                   </div>
                   <div class="col-xs-6">
-                    <div class="form-group"><label>Label</label><input type="text" class="form-control" /></div>
+                    <div class="form-group"><label for="form-control-2">Label</label><input type="text" id="form-control-2" class="form-control" /></div>
                   </div>
                 </div>
-                <div class="form-group"><label>Label</label><select class="form-control"><option>Choose:</option><option value="Value">Value</option></select></div>
+                <div class="form-group"><label for="form-control-3">Label</label><select id="form-control-3" class="form-control"><option>Choose:</option><option value="Value">Value</option></select></div>
                 <div class="form-group"><label class="form-checkbox"><input type="checkbox" /> Toggle</label></div>
                 <div class="form-group"><label class="form-radio"><input type="radio" name="radio" /> Choice 1</label> <label class="form-radio"><input type="radio" name="radio" /> Choice 2</label></div>
-                <div class="form-group"><label>Label</label><textarea class="form-control"></textarea></div>
+                <div class="form-group"><label for="form-control-4">Label</label><textarea id="form-control-4" class="form-control"></textarea></div>
                 <div class="form-group"><button class="btn">Send</button></div>
               </fieldset>
             </form>
