css vars, more modern

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title></title>
+  <title>Page Title</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -22,7 +22,7 @@
 
   <div id="page">
     <header id="head">
-      <p class="head-logo">LOGO</p>
+      <a href="#" class="head-logo">LOGO</a>
     </header>
     <nav id="nav">
       <div class="container">
@@ -36,7 +36,7 @@
       </div>
     </nav>
     <section id="hero">
-      <img src="http://placehold.it/1200x200/eee/ddd/?text=HERO" />
+      <img src="holder.js/1200x200/eee/ddd/?text=HERO&auto=yes&outline=yes" />
     </section>
     <main id="body">
 
@@ -79,16 +79,16 @@
                 <legend>Legend</legend>
                 <div class="row">
                   <div class="col-xs-6">
-                    <div class="form-group"><label for="form-control-1">Label</label><input type="text" id="form-control-1" class="form-control" placeholder="Placeholder" /></div>
+                    <div class="form-group"><label for="form-control-1">Label</label><input type="text" id="form-control-1" class="form-control" placeholder="Text Field" /></div>
                   </div>
                   <div class="col-xs-6">
-                    <div class="form-group"><label for="form-control-2">Label</label><input type="text" id="form-control-2" class="form-control" /></div>
+                    <div class="form-group"><label for="form-control-2">Label</label><input type="text" id="form-control-2" class="form-control" placeholder="Another Field" /></div>
                   </div>
                 </div>
                 <div class="form-group"><label for="form-control-3">Label</label><select id="form-control-3" class="form-control"><option>Choose:</option><option value="Value">Value</option></select></div>
                 <div class="form-group"><label class="form-checkbox"><input type="checkbox" /> Toggle</label></div>
                 <div class="form-group"><label class="form-radio"><input type="radio" name="radio" /> Choice 1</label> <label class="form-radio"><input type="radio" name="radio" /> Choice 2</label></div>
-                <div class="form-group"><label for="form-control-4">Label</label><textarea id="form-control-4" class="form-control"></textarea></div>
+                <div class="form-group"><label for="form-control-4">Label</label><textarea id="form-control-4" class="form-control" placeholder="Textarea"></textarea></div>
                 <div class="form-group"><button class="btn">Send</button></div>
               </fieldset>
             </form>
@@ -123,6 +123,7 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.6/holder.min.js"></script>
 
   <script>
     window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
